--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
 	<div class="container">
 		<div id="platform"></div>
+		<div id="technique"></div>
 	</div>	
 
 	<script src="scripts/libs/jquery/dist/jquery.min.js"></script>
@@ -20,6 +21,7 @@
 	<script src="scripts/libs/hightcharts/highcharts.js"></script>
 	<script src="scripts/libs/hightcharts/highcharts-more.js"></script>
 
+	<script src="scripts/theme.js"></script>
 	<script src="scripts/app.js"></script>
 </body>
 </html>
