add styling stuff in

--- a/index.html
+++ b/index.html
@@ -11,8 +11,23 @@
 </head>
 <body>
 	<div class="container">
-		<div id="platform"></div>
-		<div id="technique"></div>
+		<ul>
+		    <li class="polar-chart">
+		        <div id="platform"></div>
+		    </li>
+		    <li class="polar-chart">
+		        <div id="technique"></div>
+		    </li>
+		    <li class="polar-chart">
+		        <div id="tools"></div>
+		    </li>
+		    <li class="polar-chart">
+		        <div id="language"></div>
+		    </li>
+		    <li class="polar-chart">
+		        <div id="framework"></div>
+		    </li>
+		</ul>
 	</div>	
 
 	<script src="scripts/libs/jquery/dist/jquery.min.js"></script>
@@ -21,7 +36,7 @@
 	<script src="scripts/libs/hightcharts/highcharts.js"></script>
 	<script src="scripts/libs/hightcharts/highcharts-more.js"></script>
 
-	<script src="scripts/theme.js"></script>
+	<script src="scripts/libs/hightcharts/themes/sand-signika.js"></script> 	
 	<script src="scripts/app.js"></script>
 </body>
 </html>
